--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-"Hello World" 
+<!DOCTYPE html>
+<html>
+<head>
+	<title>AIESEC</title>
+</head>
+<body>
+<script type="text/javascript">
+    window.location = "http://blog.aiesec.org.eg/global-citizen/#signup-container";
+</script>
+</body>
+</html>
