--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>AIESEC</title>
 </head>
 <body>
+<a href="intent://send/+201228218838#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;end">Share</a>
 <script type="text/javascript">
-    window.location = "http://blog.aiesec.org.eg/global-citizen/#signup-container";
+    //window.location = "http://blog.aiesec.org.eg/global-citizen/#signup-container";
 </script>
 </body>
 </html>
