--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 	<title>AIESEC</title>
 </head>
 <body>
-<a href="intent://send/+201228218838#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;EXTRA_TEXT=Hi Man;end">Share</a>
+<a href="intent://send/+201228218838#Intent;scheme=smsto;package=com.whatsapp;action=android.intent.action.SENDTO;extra_text=Hi Man;end">Share</a>
+<a href="whatsapp://send?text=Hello this has been opened from the browser&phone=+01228218838&abid=+01228218838">link 2</a>
 <script type="text/javascript">
+
     //window.location = "http://blog.aiesec.org.eg/global-citizen/#signup-container";
 </script>
 </body>
